Fixed mobile layout issue with CheckoutPage

--- a/src/pages/checkoutpage/checkoutpage.styles.scss
+++ b/src/pages/checkoutpage/checkoutpage.styles.scss
@@ -40,5 +40,9 @@
       font-size: 24px;
       color: red;
     }
+
+    @media screen and (max-width: 800px) {
+      width: 90%;
+    }
   }
   
